Delete WAITING_FOR_FILES pipeline status, related and other dead code